--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <h1>COOL Generator</h1>
     <input class="color1" type="color1" />
     <input class="color1" type="color2" />
     <script src="script.js"></script>
