--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <h1>COOL Generator</h1>
     <input class="color1" type="color1" />
     <input class="color1" type="color2" />
+    <h2>This is the background</h2>
+    <h3></h3>
     <script src="script.js"></script>
   </body>
 </html>
