--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>COOL Generator</h1>
+    <h1>Background Generator</h1>
     <input class="color1" type="color1" />
     <input class="color1" type="color2" />
     <h2>This is the background</h2>
