--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <h1>Background Generator!</h1>
-    <input class="color1" type="color1" />
-    <input class="color1" type="color2" />
-    <h2>This is the background</h2>
-    <h3></h3>
-    <script src="script.js"></script>
-  </body>
+<html>
+<head>
+	<title>Cool Background DOI</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body id="gradient">
+	<h1>This is the Background DOI</h1>
+	<input class="color1" type="color" name="color1" value="#000000">
+	<input class="color2" type="color" name="color2" value="#ffffff">
+	<br>
+	<br>
+	<button id="random">Generate Random Gradient</button>
+	<h2>Current CSS Background</h2>
+	<h3></h3>
+	<script type="text/javascript" src="script.js"></script>
+</body>
 </html>
